--- a/index.html
+++ b/index.html
@@ -2,20 +2,176 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aprendiendo HTML</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aprendiendo HTML</title>
 </head>
 
 <body>
-  <h1>Tienda Muebles</h1>
-  <h2>Nuestros Productos</h2>
-  <h2>Categoria de Productos</h2>
+    <header>
+        <h1>Tienda Muebles</h1>
+    </header>
 
-  <img src="img/categoria1.jpg" alt="Imagen Categoría">
-  <img src="img/categoria2.jpg" alt="Imagen Categoría">
+    <nav>
+        <a href="">Inicio</a>
+        <a href="">Nosotros</a>
+        <a href="">Tienda</a>
+        <a href="">Blog</a>
+        <a href="">Galería</a>
+        <a href="">Contacto</a>
+    </nav>
 
+    <section>
+        <h2>Categoria de Productos</h2>
+
+        <div>
+            <img src="img/categoria1.jpg" alt="Imagen Categoría">
+            <a href="">Oficina</a>
+        </div>
+
+        <div>
+            <img src="img/categoria2.jpg" alt="Imagen Categoría">
+            <a href="#">Hogar</a>
+        </div>
+
+        <div>
+            <img src="img/categoria3.jpg" alt="Imagen Categoría">
+            <a href="#">Cocina</a>
+        </div>
+
+    </section>
+
+    <section>
+        <div>
+            <h2>Sobre Nosotros</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aspernatur sit facere amet numquam
+                nobis?
+                Odit consequuntur dolores delectus facere veniam autem excepturi dolorem reprehenderit laborum. Dolorem
+                culpa
+                numquam quia?</p>
+        </div>
+    </section>
+
+    <main>
+        <h2>Nuestros Productos</h2>
+
+        <!-- Container -->
+        <div>
+            <!-- Card productos -->
+            <div>
+                <img src="img/producto1.jpg" alt="">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis nobis unde, eligendi illum
+                        pariatur
+                        nemo exercitationem</p>
+                    <p>$1.000,00</p>
+                    <a href="#">Agregar Carrito</a>
+                </div>
+            </div>
+            <!-- Card productos -->
+            <div>
+                <img src="img/producto2.jpg" alt="">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis nobis unde, eligendi illum
+                        pariatur
+                        nemo exercitationem</p>
+                    <p>$1.000,00</p>
+                    <a href="#">Agregar Carrito</a>
+                </div>
+            </div>
+            <!-- Card productos -->
+            <div>
+                <img src="img/producto3.jpg" alt="">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis nobis unde, eligendi illum
+                        pariatur
+                        nemo exercitationem</p>
+                    <p>$1.000,00</p>
+                    <a href="#">Agregar Carrito</a>
+                </div>
+            </div>
+            <!-- Card productos -->
+            <div>
+                <img src="img/producto4.jpg" alt="">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis nobis unde, eligendi illum
+                        pariatur
+                        nemo exercitationem</p>
+                    <p>$1.000,00</p>
+                    <a href="#">Agregar Carrito</a>
+                </div>
+            </div>
+            <!-- Card productos -->
+            <div>
+                <img src="img/producto5.jpg" alt="">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis nobis unde, eligendi illum
+                        pariatur
+                        nemo exercitationem</p>
+                    <p>$1.000,00</p>
+                    <a href="#">Agregar Carrito</a>
+                </div>
+            </div>
+            <!-- Card productos -->
+            <div>
+                <img src="img/producto6.jpg" alt="">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis nobis unde, eligendi illum
+                        pariatur
+                        nemo exercitationem</p>
+                    <p>$1.000,00</p>
+                    <a href="#">Agregar Carrito</a>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+    <footer>
+        <!-- Container -->
+        <div>
+            <!-- section -->
+            <div>
+                <h3>Categorías</h3>
+
+                <nav>
+                    <a href="#">Cocina</a>
+                    <a href="#">Oficina</a>
+                    <a href="#">Jardín</a>
+                    <a href="#">Cochera</a>
+                    <a href="#">Dormitorios</a>
+                </nav>
+            </div>
+            <!-- section -->
+            <div>
+                <h3>Sobre Nosotros</h3>
+                <nav>
+                    <a href="#">Nuestra Historia</a>
+                    <a href="#">Misión, Visión y Valores</a>
+                    <a href="#">Carreras</a>
+                    <a href="#">Políticas de Privacidad</a>
+                    <a href="#">Términos del Servicio</a>
+                </nav>
+            </div>
+            <!-- section -->
+            <div>
+                <h3>Soporte</h3>
+                <nav>
+                    <a href="">Preguntas Frecuentes</a>
+                    <a href="">Ayuda en línea</a>
+                    <a href="">Confianza y Seguridad</a>
+                </nav>
+            </div>
+        </div>
+        <p>Todos los derechos reservados, Tienda Muebles &#169;</p>
+    </footer>
 
 </body>
 
