--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendiendo HTML</title>
+    <title>Ecommerce Home</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
     <header>
-        <h1>Tienda Muebles</h1>
+        <h1>Tienda <span>Muebles</span></h1>
     </header>
 
     <nav>
         <a href="">Inicio</a>
-        <a href="">Nosotros</a>
+        <a href="nosotros.html">Nosotros</a>
         <a href="">Tienda</a>
         <a href="">Blog</a>
         <a href="">Galería</a>
@@ -23,7 +24,7 @@
     </nav>
 
     <section>
-        <h2>Categoria de Productos</h2>
+        <h2>Categoria de <span>Productos</span></h2>
 
         <div>
             <img src="img/categoria1.jpg" alt="Imagen Categoría">
