Add styles home

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div>
                 <h3>Categorías</h3>
 
-                <nav>
+                <nav id="navegacion">
                     <a href="#">Cocina</a>
                     <a href="#">Oficina</a>
                     <a href="#">Jardín</a>
@@ -153,7 +153,7 @@
             <!-- section -->
             <div>
                 <h3>Sobre Nosotros</h3>
-                <nav>
+                <nav class="navegacion">
                     <a href="#">Nuestra Historia</a>
                     <a href="#">Misión, Visión y Valores</a>
                     <a href="#">Carreras</a>
