Add normize css

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Home</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
     <header>
-        <h1>Tienda <span>Muebles</span></h1>
+        <h1>Tienda
+            <span>Muebles</span>
+        </h1>
     </header>
 
-    <nav>
-        <a href="">Inicio</a>
+    <nav class="navegacion">
+        <a class="inicio" href="">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="">Tienda</a>
         <a href="">Blog</a>
@@ -43,14 +46,16 @@
 
     </section>
 
-    <section>
+    <section class="parrafo">
         <div>
             <h2>Sobre Nosotros</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aspernatur sit facere amet numquam
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aspernatur sit
+                facere amet numquam
                 nobis?
                 Odit consequuntur dolores delectus facere veniam autem excepturi dolorem reprehenderit laborum. Dolorem
                 culpa
-                numquam quia?</p>
+                numquam quia?
+            </p>
         </div>
     </section>
 
